Container divs created

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Macro Calculator</title>
   </head>
   <body>
-    <h1>Under Construction</h1>
-    <div class="ine">
+    <div class="container">
+      <div class="results" >
+        <!-- <img src="Images/results background.jpg" alt=""> --> 
+      </div>
+      <div class="input-info">
+        <div class="">
 
+        </div>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
