--- a/index.html
+++ b/index.html
@@ -1,22 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="" href="/css/master.css">
-    <title>Macro Calculator</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="results" >
-        <!-- <img src="Images/results background.jpg" alt=""> --> 
-      </div>
-      <div class="input-info">
-        <div class="">
 
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles/main.css">
+  <link rel="" href="/css/master.css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+  <!-- font-family: 'Bangers', cursive; -->
+  <title>Macro Calculator</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="results" style="background-image: url(Images/image002.jpg)" background-size: 100% 100%; background-position: center; background-repeat: no-repeat;>
+      <div class="nutrition-info">
+
+        <div class="display-calories">
+        <h1>2060</h1>
+        <h2>RECOMMENDED CALORIES</h2>
+        <h4>To <span>Loose</span> Weight</h4>
+      </div>
+
+        <ul class ="list protein-intake" id="protein">
+          <li><span>100</span>g</li>
+          <li>of Protein</li>
+        </ul>
+        <ul class ="list fats-intake" id="fats">
+          <li><span>100</span>g</li>
+          <li>of Fats</li>
+        </ul>
+        <ul class ="list carbs-intake" id="carbs">
+          <li><span>100</span>g</li>
+          <li>of Carbs</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="input-info">
+      <div class="input-info-container">
+        <div class="goals">
+          <div class="loose">
+            <h2>Loose</h2>
+          </div>
+          <div class="maintain">
+            <h2>Maintain</h2>
+          </div>
+          <div class="gain">
+            <h2>Gain</h2>
+          </div>
+        </div>
+        <h3>Body Parameters</h3>
+        <div class="sex">
+          <div class="male">
+            <h3>Male</h3>
+          </div>
+          <div class="female">
+            <h3>Female</h3>
+          </div>
+        </div>
+        <div class="weight">
+          <input type="text" name="Name" value="" placeholder="Name">
+          <input type="number" name="Age" value="" placeholder="Age">
+          <input type="number" name="weight" value="" placeholder="Weight">
+        </div>
+        <div class="activity-level-header">
+          <h1>Activity Level</h1>
+        </div>
+        <div class="active-level">
+          <div class="light">
+            <h3>Light</h3>
+          </div>
+          <div class="moderate">
+            <h3>Moderate</h3>
+          </div>
+          <div class="very-active">
+            <h3>Very</h3>
+          </div>
+        </div>
+        <div class="body-type-header">
+          <h1>Body Type</h1>
+        </div>
+        <div class="body-type">
+          <div class="ectomorph">
+            <h3>Ectomorphs </h3>
+          </div>
+          <div class="mesomorph">
+            <h3>Mesomorph</h3>
+          </div>
+          <div class="endomorph">
+            <h3>Endomorph</h3>
+          </div>
+        </div>
+        <div class="submit-or-clear">
+          <div class="clear">
+            <h3>Clear</h3>
+          </div>
+          <div class="clear">
+            <h3>Calculate</h3>
+          </div>
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
-  </body>
+  </div>
+  <script src="main.js"></script>
+</body>
+
 </html>
