Working on input section

--- a/Images/Macro Calculator.htm
+++ b/Images/Macro Calculator.htm
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="" href="/css/master.css">
-  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+<!-- saved from url=(0073)file:///Users/markking/Desktop/GitHub/Macronutrient-calculator/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <link rel="stylesheet" href="./Macro Calculator_files/main.css">
+  <link rel="" href="file:///css/master.css">
+  <link href="./Macro Calculator_files/css" rel="stylesheet">
   <!-- font-family: 'Bangers', cursive; -->
   <title>Macro Calculator</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="results" style="background-image: url(Images/image002.jpg)" background-size: 100% 100%; background-position: center; background-repeat: no-repeat;>
+    <div class="results" style="background-image: url(Images/image002.jpg)" background-size:="" 100%="" 100%;="" background-position:="" center;="" background-repeat:="" no-repeat;="">
       <div class="nutrition-info">
 
         <div class="display-calories">
-          <h1>2060</h1>
-          <h2>RECOMMENDED CALORIES</h2>
-          <h4>To <span>Loose</span> Weight</h4>
-        </div>
+        <h1>2060</h1>
+        <h2>RECOMMENDED CALORIES</h2>
+        <h4>To <span>Loose</span> Weight</h4>
+      </div>
 
         <ul class="list protein-intake" id="protein">
           <li><span>100</span>g</li>
@@ -39,14 +38,24 @@
     <div class="input-info">
       <div class="input-info-container">
         <div class="goals">
-          <h2 class="loose">Loose</h2>
-          <h2 class="maintain">Maintain</h2>
-          <h2 class="gain">Gain</h2>
+          <div class="loose">
+            <h2>Loose</h2>
+          </div>
+          <div class="maintain">
+            <h2>Maintain</h2>
+          </div>
+          <div class="gain">
+            <h2>Gain</h2>
+          </div>
         </div>
-        <h1>Body Parameters</h1>
+        <h3>Body Parameters</h3>
         <div class="sex">
-          <h3>Male</h3>
-          <h3>Female</h3>
+          <div class="male">
+            <h3>Male</h3>
+          </div>
+          <div class="female">
+            <h3>Female</h3>
+          </div>
         </div>
         <div class="weight">
           <input type="text" name="Name" value="" placeholder="Name">
@@ -92,7 +101,8 @@
       </div>
     </div>
   </div>
-  <script src="main.js"></script>
-</body>
+  <script src="./Macro Calculator_files/main.js"></script>
 
-</html>
+
+
+</body></html>
