--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="" href="/css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
@@ -36,12 +37,14 @@
       </div>
     </div>
 
+<!-- onclick="changeColor(this.id)" -->
+
     <div class="input-info">
       <div class="input-info-container">
         <div class="goals">
-          <h2 class="loose">Loose</h2>
-          <h2 class="maintain">Maintain</h2>
-          <h2 class="gain">Gain</h2>
+          <h2 class="selectGoals"  id="loose">Loose</h2>
+          <h2 class="selectGoals"  id="maintain">Maintain</h2>
+          <h2 class="selectGoals"  id="gain">Gain</h2>
         </div>
         <h1>Body Parameters</h1>
         <div class="sex">
@@ -57,37 +60,37 @@
           <h1>Activity Level</h1>
         </div>
         <div class="active-level">
-          <div class="light">
-            <h3>Light</h3>
-          </div>
-          <div class="moderate">
-            <h3>Moderate</h3>
-          </div>
-          <div class="very-active">
-            <h3>Very</h3>
-          </div>
+          <!-- <div class="light"> -->
+            <h3 class="light">Light</h3>
+          <!-- </div> -->
+          <!-- <div class="moderate"> -->
+            <h3 class="moderate">Moderate</h3>
+          <!-- </div> -->
+          <!-- <div class="very-active"> -->
+            <h3 class="very-active">Very</h3>
+          <!-- </div> -->
         </div>
         <div class="body-type-header">
           <h1>Body Type</h1>
         </div>
         <div class="body-type">
-          <div class="ectomorph">
-            <h3>Ectomorphs </h3>
-          </div>
-          <div class="mesomorph">
-            <h3>Mesomorph</h3>
-          </div>
-          <div class="endomorph">
-            <h3>Endomorph</h3>
-          </div>
+          <!-- <div class="ectomorph"> -->
+            <h3 class="ectomorph">Ectomorphs </h3>
+          <!-- </div> -->
+          <!-- <div class="mesomorph"> -->
+            <h3 class="mesomorph">Mesomorph</h3>
+          <!-- </div> -->
+          <!-- <div class="mesomorph"> -->
+            <h3 class="endomorph">Endomorph</h3>
+          <!-- </div> -->
         </div>
         <div class="submit-or-clear">
-          <div class="clear">
-            <h3>Clear</h3>
-          </div>
-          <div class="clear">
-            <h3>Calculate</h3>
-          </div>
+          <!-- <div class="clear"> -->
+            <h3 class="clear">Clear</h3>
+          <!-- </div> -->
+          <!-- <div class="clear"> -->
+            <h3 class="calculate">Calculate</h3>
+          <!-- </div> -->
         </div>
       </div>
     </div>
