testing functions for body parameters input

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="input-info">
       <div class="input-info-container">
         <div class="goals">
-          <h2 class="selectGoals"  id="loose">Loose</h2>
-          <h2 class="selectGoals"  id="maintain">Maintain</h2>
-          <h2 class="selectGoals"  id="gain">Gain</h2>
+          <h2 class="selectGoals" data-value="1">Loose</h2>
+          <h2 class="selectGoals" data-value="2">Maintain</h2>
+          <h2 class="selectGoals" data-value="3">Gain</h2>
         </div>
         <h1>Body Parameters</h1>
         <div class="sex">
