Select goals button is functional

--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
 <!-- onclick="changeColor(this.id)" -->
 
     <div class="input-info">
+
+      <!-- <div class="">
+        <input type="radio" name="check" value="">
+        <input type="radio" name="check" value="">
+      </div> -->
+
       <div class="input-info-container">
         <div class="goals">
-          <h2 class="selectGoals" data-value="1">Loose</h2>
-          <h2 class="selectGoals" data-value="2">Maintain</h2>
-          <h2 class="selectGoals" data-value="3">Gain</h2>
+          <h2 class="selectGoals" id="goals1" data-value="1">Loose</h2>
+          <h2 class="selectGoals" id="goals2" data-value="2">Maintain</h2>
+          <h2 class="selectGoals" id="goals3" data-value="3">Gain</h2>
         </div>
         <h1>Body Parameters</h1>
         <div class="sex">
