Working on select buttons

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
         <h1>Body Parameters</h1>
         <div class="sex">
-          <h3>Male</h3>
-          <h3>Female</h3>
+          <h3 id="sex1">Male</h3>
+          <h3 id="sex2">Female</h3>
         </div>
         <div class="weight">
           <input type="text" name="Name" value="" placeholder="Name">
@@ -66,37 +66,21 @@
           <h1>Activity Level</h1>
         </div>
         <div class="active-level">
-          <!-- <div class="light"> -->
-            <h3 class="light">Light</h3>
-          <!-- </div> -->
-          <!-- <div class="moderate"> -->
-            <h3 class="moderate">Moderate</h3>
-          <!-- </div> -->
-          <!-- <div class="very-active"> -->
-            <h3 class="very-active">Very</h3>
-          <!-- </div> -->
+            <h3 class="light" id="activeLevel1">Light</h3>
+            <h3 class="moderate" id="activeLevel2">Moderate</h3>
+            <h3 class="very-active" id="activeLevel3">Very</h3>
         </div>
         <div class="body-type-header">
           <h1>Body Type</h1>
         </div>
         <div class="body-type">
-          <!-- <div class="ectomorph"> -->
-            <h3 class="ectomorph">Ectomorphs </h3>
-          <!-- </div> -->
-          <!-- <div class="mesomorph"> -->
-            <h3 class="mesomorph">Mesomorph</h3>
-          <!-- </div> -->
-          <!-- <div class="mesomorph"> -->
-            <h3 class="endomorph">Endomorph</h3>
-          <!-- </div> -->
+            <h3 class="ectomorph" id="bodyType1">Ectomorphs </h3>
+            <h3 class="mesomorph" id="bodyType2">Mesomorph</h3>
+            <h3 class="endomorph" id="bodyType3">Endomorph</h3>
         </div>
         <div class="submit-or-clear">
-          <!-- <div class="clear"> -->
-            <h3 class="clear">Clear</h3>
-          <!-- </div> -->
-          <!-- <div class="clear"> -->
-            <h3 class="calculate">Calculate</h3>
-          <!-- </div> -->
+            <h3 class="clear" id="clearOrSubmit1">Clear</h3>
+            <h3 class="calculate" id="clearOrSubmit2">Calculate</h3>
         </div>
       </div>
     </div>
