Working on macronutient formula

--- a/index.html
+++ b/index.html
@@ -17,35 +17,26 @@
       <div class="nutrition-info">
 
         <div class="display-calories">
-          <h1>2060</h1>
+          <h1>0000</h1>
           <h2>RECOMMENDED CALORIES</h2>
           <h4>To <span>Loose</span> Weight</h4>
         </div>
 
-        <ul class="list protein-intake" id="protein">
-          <li><span>100</span>g</li>
+        <ul class="list protein-intake">
+          <li><span id="protein">000</span>g</li>
           <li>of Protein</li>
         </ul>
-        <ul class="list fats-intake" id="fats">
-          <li><span>100</span>g</li>
+        <ul class="list fats-intake">
+          <li><span id="fats">000</span>g</li>
           <li>of Fats</li>
         </ul>
-        <ul class="list carbs-intake" id="carbs">
-          <li><span>100</span>g</li>
+        <ul class="list carbs-intake">
+          <li><span id="carbs">000</span>g</li>
           <li>of Carbs</li>
         </ul>
       </div>
     </div>
-
-<!-- onclick="changeColor(this.id)" -->
-
     <div class="input-info">
-
-      <!-- <div class="">
-        <input type="radio" name="check" value="">
-        <input type="radio" name="check" value="">
-      </div> -->
-
       <div class="input-info-container">
         <div class="goals">
           <h2 class="selectGoals" id="goals1" data-value="1">Loose</h2>
@@ -58,9 +49,9 @@
           <h3 id="sex2">Female</h3>
         </div>
         <div class="weight">
-          <input type="text" name="Name" value="" placeholder="Name">
-          <input type="number" name="Age" value="" placeholder="Age">
-          <input type="number" name="weight" value="" placeholder="Weight">
+          <input type="text" name="Name" value="" placeholder="Height (in.)" id="inputHeight">
+          <input type="number" name="Age" value="" placeholder="Age" id="inputAge">
+          <input type="number" name="weight" value="" placeholder="Weight (lbs)" id="inputWeight">
         </div>
         <div class="activity-level-header">
           <h1>Activity Level</h1>
@@ -79,8 +70,8 @@
             <h3 class="endomorph" id="bodyType3">Endomorph</h3>
         </div>
         <div class="submit-or-clear">
-            <h3 class="clear" id="clearOrSubmit1">Clear</h3>
             <h3 class="calculate" id="clearOrSubmit2">Calculate</h3>
+            <h3 class="clear" id="clearOrSubmit1">Clear</h3>
         </div>
       </div>
     </div>
