App is functional. Debugging up next.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Calculate Your Macros Based On Your Fitness Goals, Body Type and Activity Level">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="" href="/css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   <!-- font-family: 'Bangers', cursive; -->
-  <title>Macro Calculator</title>
+  <title>Calculate Macros Needed To Loose, Gain, or Maintain Weight</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
       <div class="nutrition-info">
 
         <div class="display-calories">
-          <h1>0000</h1>
+          <h1 id="totalCalories">0000</h1>
           <h2>RECOMMENDED CALORIES</h2>
           <h4>To <span>Loose</span> Weight</h4>
         </div>
@@ -57,21 +58,21 @@
           <h1>Activity Level</h1>
         </div>
         <div class="active-level">
-            <h3 class="light" id="activeLevel1">Light</h3>
-            <h3 class="moderate" id="activeLevel2">Moderate</h3>
-            <h3 class="very-active" id="activeLevel3">Very</h3>
+          <h3 class="light" id="activeLevel1">Light</h3>
+          <h3 class="moderate" id="activeLevel2">Moderate</h3>
+          <h3 class="very-active" id="activeLevel3">Very</h3>
         </div>
         <div class="body-type-header">
           <h1>Body Type</h1>
         </div>
         <div class="body-type">
-            <h3 class="ectomorph" id="bodyType1">Ectomorphs </h3>
-            <h3 class="mesomorph" id="bodyType2">Mesomorph</h3>
-            <h3 class="endomorph" id="bodyType3">Endomorph</h3>
+          <h3 class="ectomorph" id="bodyType1">Ectomorphs </h3>
+          <h3 class="mesomorph" id="bodyType2">Mesomorph</h3>
+          <h3 class="endomorph" id="bodyType3">Endomorph</h3>
         </div>
         <div class="submit-or-clear">
-            <h3 class="calculate" id="clearOrSubmit2">Calculate</h3>
-            <h3 class="clear" id="clearOrSubmit1">Clear</h3>
+          <h3 class="calculate" id="clearOrSubmit2">Calculate</h3>
+          <h3 class="clear" id="clearOrSubmit1">Clear</h3>
         </div>
       </div>
     </div>
