--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="display-calories">
           <h1 id="totalCalories">0000</h1>
           <h2>RECOMMENDED CALORIES</h2>
-          <h4>To <span>Loose</span> Weight</h4>
+          <h4>To <span id="weightGoal">Loose</span> Weight</h4>
         </div>
 
         <ul class="list protein-intake">
