--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container">
-    <div class="results" style="background-image: url(Images/image002.jpg)" background-size: 100% 100%; background-position: center; background-repeat: no-repeat;>
+    <div class="results" id="display-results" style="background-image: url(Images/image002.jpg)" background-size: 100% 100%; background-position: center; background-repeat: no-repeat;>
       <div class="nutrition-info">
 
         <div class="display-calories">
@@ -72,7 +72,7 @@
           <h3 class="endomorph shadow" id="bodyType3">Endomorph</h3>
         </div>
         <div class="submit-or-clear">
-          <h3 class="calculate" id="clearOrSubmit2">Calculate</h3>
+           <h3 class="calculate" id="clearOrSubmit2" onclick="window.location.href='#display-results'">Calculate</h3>
            <h3 class="clear" id="clearOrSubmit1">Clear</h3>
         </div>
       </div>
