Working on refactoring JS to ES6

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="" href="/css/master.css">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
   <!-- font-family: 'Bangers', cursive; -->
-  <title>Calculate Macros Needed To Loose, Gain, or Maintain Weight</title>
+  <title>Calculate Macros</title>
 </head>
 
 <body>
